--- a/src/components/AllArticles.css
+++ b/src/components/AllArticles.css
@@ -19,13 +19,11 @@
   
   /* Style for the article-list container */
   .article-list-container {
-    display: flex;
-    
-    justify-content: space-between; /* Make child elements spread out horizontally */
+   
     align-items: center;
     max-height: 600px;
     overflow-y: auto;
-    width: 780px;
+   
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -166,14 +164,14 @@
 }
 /* Style for the filter popup container */
 .filter-popup {
-  background-color: #fff; /* Background color */
+ 
   border: 1px solid #ccc; /* Border */
   border-radius: 4px; /* Rounded corners */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Box shadow for a subtle elevation */
   padding: 20px; /* Spacing inside the container */
   position: sticky;
   top: 50px; /* Adjust as needed to align vertically with the icon */
-  margin-left: 1100px; /* Position the menu to the right of the icon */
+ /* Position the menu to the right of the icon */
   z-index: 1; /* Ensure it's above other elements */
 }
 
